--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:id="@+id/textView4"
         android:layout_width="287dp"
         android:layout_height="79dp"
-        android:text="FlowTech"
+        android:text="GlowTech"
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textIsSelectable="false"
