--- a/app/src/main/res/layout/seleccion.xml
+++ b/app/src/main/res/layout/seleccion.xml
@@ -22,25 +22,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="ir"
+        android:textAllCaps="false"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.839"
+        app:layout_constraintHorizontal_bias="0.798"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.452"
-        tools:ignore="MissingConstraints" />
-
-    <Button
-        android:id="@+id/textos"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="ir"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.839"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.288"
+        app:layout_constraintVertical_bias="0.385"
         tools:ignore="MissingConstraints" />
 
     <TextView
@@ -48,29 +37,44 @@
         android:layout_width="239dp"
         android:layout_height="47dp"
         android:text="Enviar imagenes  :"
-        android:textAlignment="textEnd"
+        android:textAlignment="center"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.11"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.453"
+        app:layout_constraintVertical_bias="0.384"
         tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/textos"
+        android:layout_width="88dp"
+        android:layout_height="48dp"
+        android:text="ir"
+        android:textAllCaps="false"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.798"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.284"
+        tools:ignore="MissingConstraints,TouchTargetSizeCheck" />
 
     <TextView
         android:id="@+id/textView12"
-        android:layout_width="239dp"
-        android:layout_height="47dp"
-        android:text="Enviar textos  :"
-        android:textAlignment="textEnd"
+        android:layout_width="225dp"
+        android:layout_height="46dp"
+        android:text="    Enviar textos  :"
+        android:textAlignment="center"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.093"
+        app:layout_constraintHorizontal_bias="0.177"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.289"
+        app:layout_constraintVertical_bias="0.283"
         tools:ignore="MissingConstraints" />
 
     <TextView
