--- a/app/src/main/res/layout/session.xml
+++ b/app/src/main/res/layout/session.xml
@@ -15,7 +15,7 @@
         app:layout_constraintHorizontal_bias="0.442"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.606" />
+        app:layout_constraintVertical_bias="0.56" />
 
     <TextView
         android:id="@+id/textView2"
@@ -35,37 +35,36 @@
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="116dp"
-        android:layout_height="43dp"
-        android:text="Contraña  :"
+        android:layout_width="168dp"
+        android:layout_height="37dp"
+        android:text="Contraseña  :"
         android:textAlignment="textEnd"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.054"
+        app:layout_constraintEnd_toStartOf="@+id/contra"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.418" />
+        app:layout_constraintVertical_bias="0.417" />
 
     <TextView
         android:id="@+id/textView8"
-        android:layout_width="116dp"
-        android:layout_height="43dp"
-        android:text="Usuario:"
+        android:layout_width="165dp"
+        android:layout_height="40dp"
+        android:text="Usuario :"
         android:textAlignment="textEnd"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.054"
+        app:layout_constraintEnd_toStartOf="@+id/usuario"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.273" />
+        app:layout_constraintVertical_bias="0.275" />
 
     <EditText
         android:id="@+id/usuario"
-        tools:ignore="SpeakableTextPresentCheck"
-        android:layout_width="230dp"
-        android:layout_height="48dp"
+        android:layout_width="209dp"
+        android:layout_height="40dp"
         android:ems="10"
         android:inputType="text"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -73,12 +72,13 @@
         app:layout_constraintHorizontal_bias="0.79"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.275" />
+        app:layout_constraintVertical_bias="0.275"
+        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
     <EditText
         android:id="@+id/contra"
-        android:layout_width="227dp"
-        android:layout_height="41dp"
+        android:layout_width="205dp"
+        android:layout_height="38dp"
         android:ems="10"
         android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="parent"
