--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,22 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.App" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+
+    <!-- Base application theme with ActionBar -->
+    <style name="Base.Theme.Final" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <item name="colorPrimary">@color/white</item>
+        <item name="colorPrimaryDark">@color/black</item>
     </style>
 
-    <style name="Theme.App" parent="Base.Theme.App" />
+    <!-- Adaptación del antiguo estilo base -->
+    <style name="Base.Theme.App" parent="Base.Theme.Final">
+        <!-- Puedes agregar personalizaciones adicionales aquí si es necesario -->
+    </style>
+
+    <!-- Tema de la aplicación -->
+    <style name="Theme.App" parent="Base.Theme.App">
+        <!-- Puedes agregar personalizaciones adicionales aquí si es necesario -->
+    </style>
+
 </resources>
+
+
+
