--- a/app/src/main/res/drawable/ic_notificacion.xml
+++ b/app/src/main/res/drawable/ic_notificacion.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-</selector>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24.0"
+    android:viewportHeight="24.0"
+    android:tint="@android:color/white">
+    <path
+        android:fillColor="@android:color/white"
+        android:pathData="M12,2C6.48,2 2,6.48 2,12s4.48,10 10,10 10-4.48 10-10S17.52,2 12,2zm0,18c-1.1,0 -2-0.9 -2-2h4c0,1.1 -0.9,2 -2,2zm2,-4H8v-2h2.6L8.29,9.29 9.71,7.87 12,10.17 14.29,7.88 15.71,9.29 13.41,12H16v2z"/>
+</vector>
